--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,8 @@ section.header {
     grid-template-rows: 1fr 1fr;
     background-color: #fab341;
     color: var(--bg-main);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    z-index: 1;
 }
 section.header svg {
     fill: var(--white);
@@ -14,6 +16,8 @@ div.top-header {
     grid-template-columns: 1fr 1fr;
     padding: 25px 25px 25px 45px;
     align-items: center;
+    justify-content: space-between;
+    grid-template-columns: auto auto;
 }
 div.search-bar {
     display: grid;
@@ -31,7 +35,18 @@ div.search-bar input {
     height: 30px;
     padding-left: 10px;
     padding-right: 10px;
+    transition: all ease-in-out 200ms;
 }
+
+div.search-bar input:focus-visible {
+    outline: none;
+}
+
+div.search-bar input:focus {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
+    transition: all ease-in-out 200ms;
+}
+
 div.username  {
     margin: 0 auto;
     display: grid;
@@ -43,8 +58,12 @@ div.username svg,
 div.username p {
     margin: auto;
 }
+
+div.username svg {
+    transition: all 150ms ease-in-out;
+}
 div.username svg:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
     transition: all 150ms ease-in-out;
     cursor: pointer;
 }
@@ -80,6 +99,9 @@ div.info h2 {
 }
 div.cta-buttons {
     display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 div.cta-buttons button{
     background-color: var(--bg-main);
@@ -88,15 +110,14 @@ div.cta-buttons button{
     border-radius: 25px;
     font-size: 15px;
     font-weight: 500;
-    margin: auto;
     padding: 10px 29px;
+    transition: all 150ms ease-in-out;
+    margin-left: 10px;
 }
 
 .cta-buttons button:hover{
     background-color: var(--white);
     color: var(--bg-main);
     border: 1px solid var(--bg-main);
-    transition: all 150ms ease-in-out;
     cursor: pointer;
-
 }
