--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -3,10 +3,13 @@ main section.side-bar {
     background-color: var(--bg-main);
     color: white;
     padding: 15px;
+    z-index: 2;
 }
 div.side-bar-logo {
     display: grid;
     grid-template-columns: 1fr 2.5fr;
+    align-items: center;
+    margin-bottom: 50px;
 }
 div.side-bar-logo svg {
     width: 40px;
@@ -15,21 +18,31 @@ div.side-bar-logo svg {
 div.side-bar-logo h1{
     margin: 0;   
     font-weight: 500;
-    margin-bottom: 50px;
 }
 div.side-bar-menu {
     display: grid;
+    align-items: center;
 }
 div.side-bar-menu a{
     color: var(--white);
     text-decoration: none;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    transition: all ease-in-out 200ms;
+}
+
+div.side-bar-menu a svg {
+    transition: all ease-in-out 200ms;
 }
 
 div.side-bar-menu a:hover {
     color: var(--orange);
 }
+
+div.side-bar-menu a:hover svg{
+    fill: var(--orange);
+}
+
 div.side-bar-menu a p {
     margin: 0; 
     padding: 10px;
