--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@
     --bg-main-accent:  #3d4d70;
 }
 
+* {
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,7 +22,7 @@ img {
 }
 svg {
     fill: var(--white);
-       width: 22px;
+    width: 22px;
 }
 
 .icons svg {
